Fixed flexbox & overflows for inbox screen

--- a/src/components/admin/app/app.less
+++ b/src/components/admin/app/app.less
@@ -294,6 +294,16 @@ html.admin.app body {
   }
   .main-content {
     margin: 0px;
+    flex-direction: column;
+    display: flex;
+    flex: 1;
+  }
+
+  .flexit {
+    flex: 1;
+  }
+  .autoflow {
+    overflow: auto;
   }
   .ui.fluid.container.the_main_container.pusher {
     flex-direction: row;
